...
import com.mfurmanczyk.toodoo.mobile.R
import com.mfurmanczyk.toodoo.mobile.view.screen.theme.TooDooTheme
import com.mfurmanczyk.toodoo.mobile.view.screen.theme.spacing
import com.mfurmanczyk.toodoo.mobile.viewmodel.WelcomeScreenUIState
import com.mfurmanczyk.toodoo.mobile.viewmodel.isValid

const val BUTTON_TEST_TAG = "save button"
@Composable
fun WelcomeScreen(
    uiState: WelcomeScreenUIState,
    onInputFieldValueChanged: (String) -> Unit,
    onSaveClick: () -> Unit,
    modifier: Modifier = Modifier
...
